fix: Add a box show to improve readability

--- a/_assets/styles/partials/_eid-prayer.scss
+++ b/_assets/styles/partials/_eid-prayer.scss
@@ -1,6 +1,7 @@
 .em-eid-prayer {
   position: relative;
   text-shadow: #fff 0px 0px 4px;
+  box-shadow: inset 0px 0px 20px 10px rgb(0 0 0 / 0.4);
 
   &::before {
     content: "";
